--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <div class="detail_warp">
                 <section>
                     <div class="warp_inner flex">
-                        <div class="text_box">
+                        <div class="text_box blue">
                             <p class="s_d_mark">ATS & CRM</p>
                             <a href="#" class="warp_tit">채용관리솔루션</a>
                             <h5 class="warp_sec_tit">이제는 ! 업무를 자동화로 쉽고 빠르게</h5>
@@ -162,32 +162,173 @@
                             </div>
                         </div>
                         <div class="imgbox">
-                            <img src="./imgs/ats_crm_slide.png" alt="ATS&CRM">
+                            <img src="./imgs/ats_crm_slide.png" alt="ATS&CRM" class="atscrm">
+                            <img src="./imgs/atsncrm.gif" alt="gif" class="atscrmgif">
                         </div>
                     </div>
-                </section>
+                </section> <!-- //채용관리솔루션 -->
                 <section>
-                    <div class="inner"></div>
-                </section>
+                    <div class="warp_inner green flex">
+                        <div class="text_box green">
+                            <p class="s_d_mark">ASSESS</p>
+                            <a href="#" class="warp_tit">인재검증솔루션</a>
+                            <h5 class="warp_sec_tit">찾아라 ! 인재 검증도 확실하게</h5>
+                            <p class="warp_text">최신이론과 기술이 적용된 인성검사와<br>검증까지 가능한 여러가지 채용진단도구를 만나보세요.</p>
+                            <p class="warp_btn_tit">많은 기업이 함께 사용하는 솔루션</p>
+                            <div class="btn_link_box flex">
+                                <div class="textbox">
+                                    <p class="f_text">ATS&CRM</p>
+                                    <p class="s_text">채용관리솔루션</p>
+                                </div>
+                                <div class="details_view">자세히보기</div>
+                            </div>
+                            <div class="btn_link_box flex">
+                                <div class="textbox">
+                                    <p class="f_text">Proctor</p>
+                                    <p class="s_text">시험감독솔루션</p>
+                                </div>
+                                <div class="details_view">자세히보기</div>
+                            </div>
+                        </div>
+                        <div class="imgbox">
+                            <img src="./imgs/assess_v.gif" alt="ASSESS" class="assess">
+                            <img src="./imgs/assess_slide.png" alt="gif" class="assessgif">
+                        </div>
+                    </div>
+                </section> <!-- //인재검증솔루션 -->
                 <section>
-                    <div class="inner"></div>
-                </section>
+                    <div class="warp_inner flex">
+                        <div class="text_box blue">
+                            <p class="s_d_mark">Interview</p>
+                            <a href="#" class="warp_tit">면접솔루션</a>
+                            <h5 class="warp_sec_tit">어디서든 ! 비대면 면접도 공정하게</h5>
+                            <p class="warp_text">지역&장소 구애없이 공정하게 , 오프라인 방식 그대로 적용한<br>비대면 면접 솔루션으로 기업에 적합한 인재를 찾아보세요.
+                            </p>
+                            <p class="warp_btn_tit">많은 기업이 함께 사용하는 솔루션</p>
+                            <div class="btn_link_box flex">
+                                <div class="textbox">
+                                    <p class="f_text">ATS&CRM</p>
+                                    <p class="s_text">채용관리솔루션</p>
+                                </div>
+                                <div class="details_view">자세히보기</div>
+                            </div>
+                            <div class="btn_link_box flex">
+                                <div class="textbox">
+                                    <p class="f_text">ASSESS</p>
+                                    <p class="s_text">인재검증솔루션</p>
+                                </div>
+                                <div class="details_view">자세히보기</div>
+                            </div>
+                        </div>
+                        <div class="imgbox">
+                            <img src="./imgs/interview_slide.png" alt="Interview" class="interview">
+                        </div>
+                    </div>
+                </section> <!-- //면접솔루션 -->
                 <section>
-                    <div class="inner"></div>
-                </section>
+                    <div class="warp_inner green flex">
+                        <div class="text_box green">
+                            <p class="s_d_mark">Proctor</p>
+                            <a href="#" class="warp_tit">시험감독솔루션</a>
+                            <h5 class="warp_sec_tit">걱정없이 ! 온라인 시험도 간편하게</h5>
+                            <p class="warp_text">다양한 유형의 온라인 시험(IBT)을 간편하게 만들고<br>부정행위 방지를 위한 감독 및 결과까지 분석 해드려요.</p>
+                            <p class="warp_btn_tit">많은 기업이 함께 사용하는 솔루션</p>
+                            <div class="btn_link_box flex">
+                                <div class="textbox">
+                                    <p class="f_text">ASSESS</p>
+                                    <p class="s_text">인재검증솔루션</p>
+                                </div>
+                                <div class="details_view">자세히보기</div>
+                            </div>
+                            <div class="btn_link_box flex">
+                                <div class="textbox">
+                                    <p class="f_text">Reference Check</p>
+                                    <p class="s_text">평판조회솔루션</p>
+                                </div>
+                                <div class="details_view">자세히보기</div>
+                            </div>
+                        </div>
+                        <div class="imgbox">
+                            <img src="./imgs/product_slide.png" alt="Proctor" class="proctor">
+                        </div>
+                    </div>
+                </section> <!-- //시험감독솔루션 -->
                 <section>
-                    <div class="inner"></div>
-                </section>
+                    <div class="warp_inner flex">
+                        <div class="text_box blue">
+                            <p class="s_d_mark">Reference Check</p>
+                            <a href="#" class="warp_tit">평판조회솔루션</a>
+                            <h5 class="warp_sec_tit">제대로 ! 평판조회까지 체계적으로</h5>
+                            <p class="warp_text">체계적인 평판 질문 등록 및 모바일 지원을 통한 높은 응답률로<br>지원자/대상자의 제대로 된 검증을 확인할 수 있어요.</p>
+                            <p class="warp_btn_tit">많은 기업이 함께 사용하는 솔루션</p>
+                            <div class="btn_link_box flex">
+                                <div class="textbox">
+                                    <p class="f_text">ATS&CRM</p>
+                                    <p class="s_text">채용관리솔루션</p>
+                                </div>
+                                <div class="details_view">자세히보기</div>
+                            </div>
+                            <div class="btn_link_box flex">
+                                <div class="textbox">
+                                    <p class="f_text">ASSESS</p>
+                                    <p class="s_text">인재검증솔루션</p>
+                                </div>
+                                <div class="details_view">자세히보기</div>
+                            </div>
+                        </div>
+                        <div class="imgbox">
+                            <img src="./imgs/recheck_slide.png" alt="Reference Check" class="reference">
+                        </div>
+                    </div>
+                </section> <!-- //평판조회솔루션 -->
             </div>
-            <div class="works_warp flex">
-                <section>
-                    <div class="inner"></div>
-                </section>
+            <div class="works_warp">
+                <div class="width_inner">
+                    <div class="widthworks_text">
+                        <h3>인크루트웍스와 함께</h3>
+                        <p>많은 기업들이 <span class="tit_blue">인크루트웍스</span>와 함께 편리한 채용과정을 경험하고 있습니다.</p>
+                    </div>
+                    <div class="logo_slide">
+                        <ul>
+                            <li><img src="./imgs/partner_logo_02.png" alt=""></li>
+                            <li><img src="./imgs/partner_logo_02.png" alt=""></li>
+                            <li><img src="./imgs/partner_logo_02.png" alt=""></li>
+                            <li><img src="./imgs/partner_logo_02.png" alt=""></li>
+                            <li><img src="./imgs/partner_logo_02.png" alt=""></li>
+                            <li><img src="./imgs/partner_logo_02.png" alt=""></li>
+                            <li><img src="./imgs/partner_logo_02.png" alt=""></li>
+                            <li><img src="./imgs/partner_logo_02.png" alt=""></li>
+                            <li><img src="./imgs/partner_logo_02.png" alt=""></li>
+                            <li><img src="./imgs/partner_logo_02.png" alt=""></li>
+                            <li><img src="./imgs/partner_logo_02.png" alt=""></li>
+                            <li><img src="./imgs/partner_logo_02.png" alt=""></li>
+                            <li><img src="./imgs/partner_logo_02.png" alt=""></li>
+                            <li><img src="./imgs/partner_logo_02.png" alt=""></li>
+                            <li><img src="./imgs/partner_logo_02.png" alt=""></li>
+                            <li><img src="./imgs/partner_logo_02.png" alt=""></li>
+                            <li><img src="./imgs/partner_logo_02.png" alt=""></li>
+                            <li><img src="./imgs/partner_logo_02.png" alt=""></li>
+                            <li><img src="./imgs/partner_logo_02.png" alt=""></li>
+                            <li><img src="./imgs/partner_logo_02.png" alt=""></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-            <div class="experience_wrap flex">
-                <section>
-                    <div class="inner"></div>
-                </section>
+            <div class="experience_wrap">
+                <div class="max_inner flex">
+                    <div class="experience_tit">
+                        <h3>채용에 대한 솔루션은 <span class="tit_blue">인크루트웍스</span>에게 맡겨주세요. <br> 지금 바로 경험해 보세요.</h3>
+                        <p>지능형 지원자 검증 및 평가, 편견 없는 채용 프로세스, 정확하고 효율적인 채용 및 비용 절감</p>
+                    </div>
+                    <div class="experience_btn flex">
+                        <div class="button ghost_white">
+                            무료체험
+                        </div>
+                        <div class="button ghost_blue">
+                            도입문의
+                        </div>
+                    </div>
+                </div>
             </div>
         </main>
         <footer class="flex">
